--- a/build.gradle
+++ b/build.gradle
@@ -26,18 +26,16 @@ dependencies {
 
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
  
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.+'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.+'
     
-    testRuntime group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: jerseyVersion
-    testRuntime group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: jerseyVersion
-    testRuntime group: 'org.glassfish.jersey.ext', name: 'jersey-bean-validation', version: jerseyVersion
+    testRuntime group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
     
-    testRuntime group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.+'
+    testRuntime group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: jerseyVersion
 }
 
 task sourceJar(type: Jar) {
